# shekyl-gui-wallet

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  index.html  package-lock.json  package.json  shekyl-foundation-public-signed.asc  vite.config.ts  vitest.config.ts
.cursor/rules/: 00-mission.mdc  00-system-thinking.mdc  05-system-thinking.mdc  06-branching.mdc  10-cryptography.mdc  10-shekyl-first.mdc  15-deletion-and-debt.mdc  20-rust-vs-cpp-policy.mdc  25-rust-architecture.mdc  30-cryptography.mdc  35-secure-memory.mdc  40-ffi-discipline.mdc  45-rust-lint-checks.mdc  50-testing.mdc  60-no-monero-legacy.mdc  65-address-format-discipline.mdc  70-modular-consensus.mdc  75-system-autonomy.mdc  80-usability.mdc  81-no-protocol-knowledge.mdc  82-failure-mode-ux.mdc  90-commits.mdc  91-documentation-after-plans.mdc  92-copyright-header.mdc  93-legacy-symbol-migration.mdc  93-version-symbol-migration.mdc  commits.mdc  rust-fmt-check.mdc
.github/workflows/: audit.yml  ci.yml  codeql.yml  release.yml
docs/: CHANGELOG.md  FOLLOWUPS.md  GUI_SECURITY.md  INSTALLATION.md  STRUCTURAL_TODO.md  USER_GUIDE.md  WALLET_STARTUP.md
scripts/: sync-version.mjs
src/: App.tsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/binaries/: README.md
src-tauri/capabilities/: daemon.json  default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  daemon_manager.rs  daemon_rpc.rs  lib.rs  main.rs  state.rs  validate.rs  wallet_bridge.rs  wallet_name.rs  wallet_process.rs  wallet_rpc.rs
src/components/: BalanceCard.tsx  ChainHealthPanel.tsx  CollapsibleSection.tsx  DaemonConnectingScreen.tsx  DaemonOfflineBanner.tsx  EmissionGauge.tsx  Header.tsx  Layout.tsx  LoadingScreen.tsx  NetworkBadge.tsx  PqcStatusBadge.tsx  SecurityBadge.tsx  SecurityPanel.tsx  Sidebar.tsx  StakeTierCard.tsx  TestnetBanner.tsx  WalletDirAdvanced.tsx
src/context/: DaemonContext.tsx  WalletContext.tsx  daemonState.ts  useDaemon.ts  useWallet.ts  walletState.ts
src/lib/: format.ts
src/pages/: ChainHealth.tsx  CreateWallet.tsx  Dashboard.tsx  Help.tsx  ImportWallet.tsx  Mining.tsx  Multisig.tsx  Receive.tsx  Send.tsx  Settings.tsx  Staking.tsx  Transactions.tsx  Unlock.tsx  Welcome.tsx
src/styles/: globals.css
src/test/: setup.ts
(+25 files in other folders)
