[package]
name = "shekyl-wallet"
version = "0.1.1-beta"
description = "Shekyl desktop wallet"
authors = ["The Shekyl Foundation"]
license = "BSD-3-Clause"
repository = "https://github.com/Shekyl-Foundation/shekyl-gui-wallet"
edition = "2021"

[lib]
name = "shekyl_wallet_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.13.2", default-features = false, features = ["json", "rustls"] }
dirs = "6"
which = "7"
