[package]
name = "shekyl-wallet"
version = "3.1.0-alpha.5"
description = "Shekyl desktop wallet"
authors = ["The Shekyl Foundation"]
license = "BSD-3-Clause"
repository = "https://github.com/Shekyl-Foundation/shekyl-gui-wallet"
edition = "2021"

[lib]
name = "shekyl_wallet_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.13.2", default-features = false, features = ["json", "rustls"] }
dirs = "6"
hex = "0.4"
shekyl-wallet-rpc = { path = "../../shekyl-core/rust/shekyl-wallet-rpc", features = ["rust-scanner", "native-sign"] }
shekyl-scanner = { path = "../../shekyl-core/rust/shekyl-scanner", features = ["rust-scanner"] }
shekyl-simple-request-rpc = { path = "../../shekyl-core/rust/shekyl-oxide/shekyl-oxide/rpc/simple-request" }
shekyl-address = { path = "../../shekyl-core/rust/shekyl-address" }
shekyl-ffi = { path = "../../shekyl-core/rust/shekyl-ffi" }
curve25519-dalek = { version = "4", features = ["zeroize"] }
tokio-util = "0.7"
tracing = "0.1"
zeroize = { version = "1", features = ["alloc"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
proptest = "1"
